# clipseekr

./: CMakeLists.txt  CapFrames.hpp  Changelog.txt  ClipReader.cpp  ClipSeekrConfig.h  ClipSeekrConfig.h.in  FrameReader.cpp  FrameReader.hpp  FrameWriter.cpp  FrameWriter.hpp  HashStore.hpp  License.txt  README.md  README.txt  RedisHashStore.cpp  RedisHashStore.hpp  TableEntry.hpp  TableHashStore.cpp  TableHashStore.hpp  TestFrameReader.cpp  TestRedisHashStore.cpp  clipseekrFindExts.cmake  clipseekr_main.cpp  clipseekrutils.cpp  clipseekrutils.h  clipster_main.cpp
hiredis/: Makefile
